--- a/style-mobile.88301.css
+++ b/style-mobile.88301.css
@@ -87,7 +87,7 @@ p.footer {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #171717 url(./splash.5c3ae.jpg) no-repeat center;
+  background: #171717 url(./splash.fa774.jpg) no-repeat center;
   background-size: 100%;
 }
 
